[gd_scene load_steps=9 format=3 uid="uid://deqdqyy50sw2o"]

[ext_resource type="PackedScene" uid="uid://bp8nf0kd54ere" path="res://UI/nice_background_temp.tscn" id="1_ncf7y"]
[ext_resource type="FontFile" uid="uid://bax2eejt2vao" path="res://BiemoyDemo-dr8AZ.ttf" id="2_2oouv"]
[ext_resource type="Script" uid="uid://qmhetpeoklp2" path="res://UI/animal_gallery.gd" id="2_2rrjv"]
[ext_resource type="Texture2D" uid="uid://klq8cdikv3k8" path="res://animalborder.png" id="3_5uksp"]
[ext_resource type="Texture2D" uid="uid://n82a5le1eigt" path="res://flower_complete.png" id="3_glru8"]
[ext_resource type="Texture2D" uid="uid://tvhwgl6ecci1" path="res://bonecandy-sun.png" id="4_6c7bj"]
[ext_resource type="Texture2D" uid="uid://d1ui8slgewlny" path="res://arrow.png" id="6_xqboh"]
[ext_resource type="Texture2D" uid="uid://cluo4meuwdxlk" path="res://UI/circle.png" id="7_sjpnp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2rrjv")

[node name="Decorations" type="Node" parent="."]

[node name="FlowerComplete" type="Sprite2D" parent="Decorations"]
position = Vector2(55.47, 593.95)
scale = Vector2(0.99913, 0.99913)
texture = ExtResource("3_glru8")

[node name="FlowerComplete2" type="Sprite2D" parent="Decorations"]
position = Vector2(234, 616)
scale = Vector2(0.689529, 0.689529)
texture = ExtResource("3_glru8")

[node name="Bonecandy-sun" type="Sprite2D" parent="Decorations"]
z_index = -1
position = Vector2(960, 216)
scale = Vector2(0.191383, 0.191765)
texture = ExtResource("4_6c7bj")

[node name="NiceBackgroundTemp" parent="." instance=ExtResource("1_ncf7y")]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -416.0
offset_top = 40.0
offset_right = 440.0
offset_bottom = 168.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 26
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 96
text = "Animal Gallery"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
icon = ExtResource("6_xqboh")

[node name="Right" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("6_xqboh")

[node name="Circle" type="TextureRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -655.5
offset_top = -515.5
offset_right = 655.5
offset_bottom = 515.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_sjpnp")

[node name="HBoxContainer" type="HBoxContainer" parent="Circle"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -478.5
offset_top = -146.0
offset_right = 1272.5
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Animalborder" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder6" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder7" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder8" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder8"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder2" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder3" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder4" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animalborder5" type="TextureRect" parent="Circle/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_5uksp")
expand_mode = 3
stretch_mode = 5

[node name="Label2" type="Label" parent="Circle/HBoxContainer/Animalborder5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -124.5
offset_right = 110.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2oouv")
theme_override_font_sizes/font_size = 26
text = "this is how you
 talk about an 
animal it has a
lot of things"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
